<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin"
        android:background="@color/midnightExpress">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/textview_login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNameLogForm"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:hint="@string/login_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNameLogForm"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPasswordLogForm"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:hint="@string/login_password_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordLogForm"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/btn_login_text" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            android:background="@color/midnightExpress" />

    </LinearLayout>
</androidx.cardview.widget.CardView>